--- a/public/main.css
+++ b/public/main.css
@@ -51,3 +51,12 @@ codersrank-portfolio {
     --link-font-weight: 500;
     --link-margin: 8px;
 }
+codersrank-work-experience,
+codersrank-education {
+  --item-bg-color: #161616;
+  --item-border-radius: 8px;
+  --item-spacing: 16px;
+  --item-padding: 16px;
+  --logo-size: 64px;
+  --tag-bg-color: rgba(255,255,255,0.075);
+}
