--- a/public/main.css
+++ b/public/main.css
@@ -46,10 +46,12 @@ header {
 }
 .avatar {
   border: 4px solid #444;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   width: 20%;
-  margin-right: 40px;
   height: auto;
+  margin-right: 40px;
+  aspect-ratio: 1;
+  object-fit: cover;
 }
 
 .header-content {
